infrastructure/core/longhorn-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-nginx
  namespace: longhorn-system
spec:
  ingressClassName: internal
  rules:
  - host: longhorn.${DOMAIN_0}
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
